adicionando dependencias pom e arrumando dtos